--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -5,7 +5,7 @@ title: Photography & Lightroom
 subtitle: Learn how to take amazing photos in Bali
 skill-name: Photography & Lightroom
 location: 'Bali, Indonesia'
-snippet: Step up your game and learn photography and lightroom editing, while exploring some of the most iconic locations in Bali.
+snippet: Step up your game and learn photography and lightroom while exploring some of the most scenic locations in Bali.
 skill-name: Photography & Lightroom Editing
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. We will meet early in the morning to shoot the sunrise and then depending on weather and preferences, we will continue to other scenic locations around Canggu. After lunch we will export and edit your pictures together in Lightroom.
