--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@ banner: /images/homepage/bg-photography.jpg
 <section class="about-section" class="center">
 <div>
 <h5> Learn with locals allows you to find local learning experiences while traveling. Why not become a better photographer of brush up on your writing skills while exploring a destination?</h5>
-<h5> We belive that traveling isn't just about going somewhere and moving - we travel because we want to be moved - which is why we've started Learn with locals so you can learn while you're traveling, challenge yourself and connect with likeminded individuals.</h5>
+<h5> We belive that traveling isn't just about going somewhere - we travel because we want to be moved - which is why we've started Learn with locals so you can challenge yourself, learn something new and connect with likeminded individuals.</h5>
 </div>
 </section>
 
 <section class="sign-up-section">
   <div>
     <h3>Sign up now and receive 20% off your first Learning Experience!</h3>
-    <a class="black-button" href="/signup.html"> SIGN UP </a>
+    <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
   </div>
 </section>
 
