--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ button: true
     </div>
     <div class="col-1 quote right">"</div>
     <div class="col-6-middle testimonial-section center">
-      I went on a 3 week holiday to Bali and wanted to learn something new and challenge myself, so I signed up for a 3 day coding skill with Tina. Can only recommend this experience to anyone wanting upskill and learn how to code - in paradise! :)
+      I went on a 3 week holiday to Bali and wanted to learn something new and challenge myself, so I signed up for a 3 day coding experience with Tina. Can only recommend this to anyone wanting upskill and learn how to code - in paradise! :)
     <div class="col-1-bottom quote right">"</div>
   </div>
 </section>
@@ -78,7 +78,7 @@ button: true
     <h5> We're currently building our community and looking for people like you!</h5>
   </div>
   <div>
-    <a class="black-button" target="_blank" href="https://instituteofcode.typeform.com/to/jy54Ug" rel="nofollow"> SIGN UP</a>
+    <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
 </div>
 <h5>Join our community and get 20% OFF any Learning Experience.</h5>
 </section>
