--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 banner: /images/homepage/bg-photography.jpg
-title: Learn With Locals
-subtitle: Join our community
-button: true
+title: Welcome to our blog
+subtitle: Behind the scenes and other stories
 ---
+
 <section class="blog-section center">
   <h2>
     Stories from the blog
@@ -21,4 +21,13 @@ button: true
   </a>
     {% endfor %}
   </div>
+</section>
+<section class="sign-up-section">
+  <div>
+    <h4>Join our community</h4>
+  </div>
+  <div>
+    <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
+</div>
+<h5>Get 20% OFF any future Learning Experience and early beta access.</h5>
 </section>
