--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 banner: /images/homepage/bg-photography.jpg
-title: Welcome to our blog
+title: Welcome to the blog
 subtitle: Behind the scenes and other stories
 ---
 
