--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: default
 banner: /images/homepage/bg-photography.jpg
 title: Welcome to the blog
-subtitle: Behind the scenes and other stories
+subtitle: Stories to inspire you
 ---
 
 <section class="blog-section center">
