--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -10,7 +10,7 @@ skill-name: Photography & Lightroom Editing
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. We will meet early in the morning to shoot the sunrise and then depending on weather and preferences, we will continue to other scenic locations around Canggu. After lunch we will export and edit your pictures together in Lightroom.
 good-to-know: Make sure you have space on your camera's memory card as well as your harddrive on your laptop. We will shoot in RAW which takes up quite a lot of space. It might be a good idea to bring an external harddrive or USB, but not required.
-where: Rice fields, temples, beaches and viewpoints around Canggu, Bali
+where: Canggu, Bali
 price: $250 USD
 duration: 2 days
 host-name: Emilio
