--- a/_upskills/blogging-content-creation.html
+++ b/_upskills/blogging-content-creation.html
@@ -27,7 +27,7 @@ level: Beginner
 categories: ['tech']
 ---
 <!-- LightWidget WIDGET -->
-<a href="https://www.instagram.com/cphexplorer/" target="_blank"><img src="/uploads/ali-instagram.jpg" alt="ali-girlspo.jpg"></a>
+<a href="https://www.instagram.com/ali_girlspo" target="_blank"><img src="/uploads/ali-instagram.jpg" alt="ali-girlspo.jpg"></a>
 <section class="sign-up-section">
   <div>
     <h4>
