email contact update

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ banner: /images/homepage/bg-photography.jpg
 ---
 <section class="sign-up-form center">
   <p>What's on your mind?</p>
-  <form method="POST" action="http://formspree.io/urisager@gmail.com">
+  <form method="POST" action="http://formspree.io/hello@learnwithlocals.io">
   <input type="text" name="name" placeholder="Your name">
   <input type="email" name="email" placeholder="Your email">
   <textarea name="message" placeholder="Message" rows="5"></textarea>
