--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ button: true
 <section class="about-banner-section center">
   <div>
     <h5>Imagine going to Bali and instead of just chilling by the pool or doing the typical tourist stuff, you might be able to upgrade or pick up a new skill.</h5>
-    <h5>Learn with Locals allows you to learn new skills while connecting with likeminded people.</h5>
+    <h5>Learn with Locals allows you to find unique travel experiences and learn while connecting with likeminded people.</h5>
   </div>
 </section>
 
@@ -109,5 +109,5 @@ button: true
   </a>
     {% endfor %}
   </div>
-  
+
 </section>
