--- a/signup.html
+++ b/signup.html
@@ -15,13 +15,9 @@ banner: /images/homepage/bg-photography.jpg
 
 <section class="sign-up-section">
   <div>
-    <h4>Join our community</h4>
+    <h4>Join our comunity and get early beta access</h4>
   </div>
-  <div>
-    <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
-</div>
-<h5>Get 20% OFF any future Learning Experience and early beta access.</h5>
-</section>
+  
 
 <section class="blog-section center">
   <h2>
