--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ banner: /images/homepage/bg-photography.jpg
 
 <section class="sign-up-section">
   <div>
-    <h3>Join our waitlist and receive 20% off your first Learning Experience when we launch!</h3>
+    <h3>Join our waitlist and get early beta access!</h3>
     <a class="black-button" target="_blank" href="https://learnwithlocals.typeform.com/to/r9afK7" rel="nofollow"> SIGN UP</a>
   </div>
 </section>
