--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ button: true
   <!-- These are hidden fields -->
   <input type="hidden" name="_cc" value="hello@learnwithlocals.io" />
   <input type="text" name="_gotcha" style="display:none" />
-  <input type="hidden" name="_next" value="../register/blogging-thanks" />
+  <input type="hidden" name="_next" value="../sign-up-thank-you.html" />
 </div></form>
 </section>
 </section>
