--- a/sign-up-thank-you.html
+++ b/sign-up-thank-you.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Thank you for signing up
-subtitle: We'll be in touch
+subtitle: We'll be in touch shortly
 banner: /images/homepage/bg-photography.jpg
 ---
 
