--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,8 @@ subtitle: Stories to inspire you
   <h2>
     Stories from the blog
   </h2>
+  <hr>
+
   <!-- BLOG IMG 1 -->
   <div class="grid">
     {% for post in site.posts %}
@@ -22,7 +24,7 @@ subtitle: Stories to inspire you
     {% endfor %}
   </div>
 </section>
-<section class="sign-up-section">
+  <!-- <section class="sign-up-section>
   <div>
     <h4>Join our community</h4>
   </div>
