--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ banner: /images/homepage/bg-photography.jpg
     <p>
       <h5>We're currently building our community and looking for people like you!</h5>
     </p>
-    <h4>Join our community and get early access.</h4>
+    <h4>Join our community and get early beta-access.</h4>
   </div>
 
 <form action="https://formspree.io/hello@learnwithlocals.io" method="POST" class="sign-up-form">
