--- a/blog.html
+++ b/blog.html
@@ -2,12 +2,12 @@
 layout: default
 banner: /images/homepage/bg-photography.jpg
 title: Welcome to the blog
-subtitle: Stories to inspire you
+subtitle: Learn With Locals
 ---
 
 <section class="blog-section center">
   <h2>
-    Stories from the blog
+    Stories to inspire you
   </h2>
   <hr>
 
