--- a/index-2.html
+++ b/index-2.html
@@ -5,6 +5,7 @@ subtitle: Upskill and connect with likeminded people
 sign-up: <a class="button" href="/signup.html"> JOIN </a>
 banner: /images/homepage/bg-photography.jpg
 button: true
+menu: true
 ---
 <!--ABOUT BANNER SECTION  -->
 <section class="about-banner-section center">
