--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: Learn With Locals while you travel
 subtitle: Upskill and connect with likeminded people
-sign-up: <a class="button" href="/signup.html"> JOIN </a>
 banner: /images/homepage/bg-photography.jpg
 button: true
+menu: false
 ---
 <!--ABOUT BANNER SECTION  -->
 <section class="about-banner-section center">
@@ -64,7 +64,7 @@ button: true
 <!-- BLOG SECTION -->
 <section class="blog-section center">
   <h2>
-    Stories from the blog
+    Stories from the <a href="/blog.html">blog</a>
   </h2>
   <div>
     <hr>
