--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ menu: false
           <h5>
           <label> Would you like to teach or learn??  </label>                 </h5>
                  <div class="checkboxes">
-                 <p>TEACH<input type="checkbox" name="interests" value="fly" /> </p>
-                 <p>LEARN<input type="checkbox" name="interests" value="surf" /> </p>
-                 <p>BOTH<input type="checkbox" name="interests" value="following" /> </p>
+                 <p>TEACH<input type="checkbox" name="interests" value="teach" /> </p>
+                 <p>LEARN<input type="checkbox" name="interests" value="learn" /> </p>
+                 <p>BOTH<input type="checkbox" name="interests" value="both" /> </p>
                </div>
 
         </select>
