--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@ banner: /images/homepage/bg-photography.jpg
 <section class="about-section" class="center">
 <div>
 <h5> Learn with locals allows you to grow your skills while teaching others and connect with likeminded individuals while making money</h5>
-  <h5>We belive that everybody has a passion and a set of skills they master and can teach others. Why not share your skills, make money and meet new people while doing so? You don't have to be a professional to teach - passion will do just fine.</h5>
+  <h5>We believe that everybody has a passion and a set of skills they master and can teach others. Why not share your skills, make money and meet new people while doing so? You don't have to be a professional to teach - passion will do just fine.</h5>
 </div>
 </section>
 
