--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Learn With Locals
+title: Learn With Locals while you travel
 subtitle: Upskill and connect with likeminded people
 banner: /images/homepage/bg-photography.jpg
 button: true
